# fastapi-graphql-tortoise

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  docker-compose.yml
src/: main.py  pyproject.toml
src/app/core/: auth.py  config.py  db.py  redis.py
src/app/core/social_auth/: apple.py  google.py
src/app/graphql/: context.py  schema.py
src/app/graphql/inputs/: auth.py
src/app/graphql/mutations/: auth.py
src/app/graphql/queries/: users.py
src/app/graphql/subscriptions/: users.py
src/app/graphql/types/: auth.py  user.py
src/app/models/: __init__.py  base.py  users.py
src/migrations/models/: 0_20221105102113_init.py
src/tests/models/: test_users.py
